src/test/deca/syntax/parser/invalid/pars_inv_if_elseif_sans_if.deca
// Description:
//    tests de programme incorrect syntaxiquement pour le if
//
// Resultats:
//    Ligne 12 : Erreur (oubli else if sans if précédent )
//    
//
// Historique:
//    cree le 04/01/2023

{
    x = 0;
    else if (x < 5){
        println("Hello");
        x += 1;
    }
}
